# ndk_practice

./: build.gradle  readme.md  settings.gradle
app/: build.gradle  readme.md
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MyGLRenderContext.cpp  MyGLRenderContext.h  TriangleSample.cpp  TriangleSample.h  jniImpl.cpp  native-arr.c  native-lib.cpp  native-lib.h  native-memory.c  native-parcel.cpp  native_lib1.c  natvie-pointer.c
app/src/main/cpp/demo/: m_thread.c  native-arr-copy.cpp  native-arr-err.c  native-lib.cpp  native-lib.h  native-lib1.c  native-memory.c  native-parcel.cpp  native-str.c  native-struct.c  natvie-pointer.c
app/src/main/cpp/demo/testc/: JNIEnv_test.c  JNIEnv流程原理.c
app/src/main/cpp/demo/testcpp/: TestClass.cpp  TestClass1.cpp  TestClass2.cpp  TestClass3.cpp  TestClassOperator_override.cpp  TestClass_algorithm.cpp  TestClass_static_friend.cpp  TestClass_static_friend.h  TestClasstemplate.cpp  Test_str.cpp  Test_struct_union.cpp  testCast.cpp
app/src/main/cpp/libjpg/: jpeg-compress.cpp
app/src/main/cpp/render/: MyGLRenderContext.cpp  MyGLRenderContext.h
app/src/main/cpp/sample/: Ball.cpp  Ball.h  BasicLighting.cpp  BasicLighting.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  GLSampleBase.h  SkySphere.cpp  SkySphere.h  Square.cpp  Square.h  TextureMapSample.cpp  TextureMapSample.h  TextureMapSample2.cpp  TextureMapSample2.h  TextureMapSample3.cpp  TextureMapSample3.h  TriangleSample.cpp  TriangleSample.h  VAOSample.cpp  VAOSample.h
app/src/main/cpp/sensor/: Makefile  sc450aimipiraw_Sensor.c  sc450aimipiraw_Sensor.h
app/src/main/cpp/testc/: JNIEnv流程原理.c
app/src/main/cpp/testcpp/: TestClass.cpp  TestClass1.cpp  TestClass2.cpp  TestClass3.cpp
app/src/main/cpp/util/: GLUtils.cpp  GLUtils.h  ImageDef.h  LogUtil.h
app/src/main/res/layout/: activity_bitmap.xml  activity_main.xml  (+5 more)
bitmap-compress/: build.gradle
bitmap-compress/src/main/: AndroidManifest.xml
bitmap-compress/src/main/cpp/: CMakeLists.txt  native-lib.cpp
gradle/wrapper/: gradle-wrapper.properties
jpeg-pratice/: build.gradle
jpeg-pratice/src/main/: AndroidManifest.xml
jpeg-pratice/src/main/cpp/: CMakeLists.txt  jni_bitmap.cpp
mylibrary/: build.gradle
mylibrary/src/main/: AndroidManifest.xml
pratice_audio/: build.gradle  readme.md
pratice_audio/src/main/: AndroidManifest.xml
pratice_audio/src/main/cpp/: CMakeLists.txt  CmakeLists.txt
pratice_ffmpeg/: build.gradle  readme.md
pratice_ffmpeg/src/main/: AndroidManifest.xml
pratice_ffmpeg/src/main/cpp/: CmakeLists.txt  ff-native-lib.cpp  native-lib.cpp
pratice_opencv/: build.gradle  readme.md
pratice_opencv/src/main/: AndroidManifest.xml
pratice_opencv/src/main/cpp/: BitmapMatUtils.cpp  BitmapMatUtils.h  CmakeLists.txt  bank-card-ocr.cpp  cardocr.cpp  cardocr.h
(+237 files in other folders)
